src/objects/Surround_CQ_Reporting__c.object
<CustomObject>
</CustomObject>