src/objects/Surround_CQ_Reporting__c/fields/CQ_FSO_Received__c.field-meta.xml
<CustomField>
    <fullName>CQ_FSO_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Sales Order Received?</label>
    <type>Checkbox</type>
</CustomField>