src/objects/Surround_CQ_Reporting__c/fields/Customer_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Request Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>