src/objects/Surround_CQ_Reporting__c/fields/eQuote_Error__c.field-meta.xml
<CustomField>
    <fullName>eQuote_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>eQuote Error</label>
    <length>128</length>
    <type>Text</type>
</CustomField>