src/objects/Surround_CQ_Reporting__c/fields/No_of_Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_Until_Due__c</fullName>
    <formula>CQ_Due_Date__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>