src/objects/Surround_CQ_Reporting__c/recordTypes/Surround_CQ_Reporting_Read_Only_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Surround_CQ_Reporting_Read_Only_Record_Type</fullName>
    <active>true</active>
    <description>This record type is for surround CQ Reporting object</description>
    <label>CQ Reporting Read-Only</label>
</RecordType>